# manuscripta

./: .gitignore  CHANGELOG.md  MIGRATION.md  Makefile  README.md  baseline-coverage.json  coverage.json  pyproject.toml
.github/workflows/: mutation.yml
.mutmut/: equivalent.yaml
docs/: PHASE-6-CLEANUP.md  TESTING.md  migration-v0.7.md
docs/audits/: current-mutation.md  phase-4b-pass-2-paused.md
docs/audits/history/: 2026-04-17-mutation.md  2026-04-18-mutation.md  2026-04-19-mutation.md  2026-04-20-mutation.md  2026-04-21-mutation.md  2026-04-22-mutation.md  2026-04-23-mutation.md  2026-04-24-mutation.md  2026-04-25-mutation.md  2026-04-26-mutation.md  2026-04-27-mutation.md  2026-04-28-mutation.md  2026-04-29-mutation.md  2026-04-30-mutation.md  2026-05-01-mutation.md  2026-05-02-mutation.md  2026-05-03-mutation.md  2026-05-04-mutation.md  2026-05-05-mutation.md  2026-05-06-mutation.md  2026-05-07-mutation.md  2026-05-08-mutation.md  2026-05-09-mutation.md  2026-05-10-mutation.md  2026-05-11-mutation.md  2026-05-12-mutation.md  2026-05-13-mutation.md  2026-05-14-mutation.md  2026-05-15-mutation.md  2026-05-16-mutation.md  2026-05-17-mutation.md  2026-05-18-mutation.md  2026-05-19-mutation.md  2026-05-20-mutation.md  2026-05-21-mutation.md  2026-05-22-mutation.md  2026-05-23-mutation.md  2026-05-24-mutation.md  2026-05-25-mutation.md  2026-05-26-mutation.md  (+58 more)
docs/decisions/: 0001-test-pyramid.md  0002-mutation-testing.md  0003-coverage-threshold-categories.md  0004-exception-strings-not-api.md  README.md
scripts/: check_mutation_thresholds.py
src/manuscripta/: __init__.py  exceptions.py
src/manuscripta/audiobook/: generator.py
src/manuscripta/audiobook/tts/: __init__.py  base.py  edge_tts_adapter.py  elevenlabs_adapter.py  exceptions.py  google_cloud_tts_adapter.py  google_translate_adapter.py  gtts_adapter.py  pyttsx3_adapter.py  retry.py  text_chunking.py
src/manuscripta/config/: loader.py
src/manuscripta/data/: emoji_map_sanity.py
src/manuscripta/export/: book.py  print_version.py  shortcuts.py  shortcuts_comic.py
src/manuscripta/images/: generate.py  generate_deepai.py  inject.py
src/manuscripta/markdown/: emojis.py
src/manuscripta/project/: init.py  metadata.py  shortcuts_init.py
src/manuscripta/translation/: deepl.py  lmstudio.py  shortcuts.py  shortcuts_lms.py
tests/: conftest.py  test_bulk_change_extension.py  test_clean_git_cache.py  test_convert_images.py  test_convert_links_to_plain_text.py  test_convert_links_to_plain_text_extra.py  test_convert_round_trip.py  test_convert_to_absolute_extra.py  test_convert_to_relative.py  test_create_chapters.py  test_fix_german_quotes.py  test_full_export_book.py  test_full_export_book_markdown_ext_and_validation_path.py  test_full_export_book_output_file.py  test_full_export_book_pipeline.py  test_full_export_comic_combine.py  test_full_export_comic_pdf.py  test_generate_audiobook.py  test_generate_audiobook_use_cases.py  test_generate_images_deepai.py  test_image_conversion.py  test_images_integration.py  test_init_book_project.py  test_inject_images.py  test_load_export_settings.py  test_make_tag_message_test_ask_helpers.py  test_normalize_toc_links.py  test_print_version_build_print_args.py  test_print_version_build_print_pipeline.py  test_print_version_build_run_script.py  test_reorder_and_rename_chapters.py  test_replace_emojis_walk_and_cli.py  test_shortcuts_export_passthrough.py  test_strip_links_io.py  test_strip_links_text.py  test_unbold_md_headers.py  test_validate_docx_and_md.py  test_validate_epub.py
tests/audiobook/tts/: conftest.py  test_base.py  test_edge_tts_adapter.py  test_elevenlabs_adapter.py  test_factory.py  test_google_cloud_tts_adapter.py  test_google_translate_adapter.py  test_pyttsx3_adapter.py  test_retry.py
tests/e2e/: test_exceptions_pdf_build.py  test_pdf_generation.py  test_run_export_api_pdf.py
tests/e2e_wheel/: conftest.py  test_wheel_install.py
tests/fixtures/dsk_like/: README.md
tests/fixtures/dsk_like/config/: metadata.yaml
tests/fixtures/dsk_like/manuscript/back-matter/: imprint.md
tests/fixtures/dsk_like/manuscript/chapters/: 01-arbeit.md  02-einkommen.md
tests/fixtures/dsk_like/manuscript/front-matter/: foreword.md
tests/helpers/: __init__.py  pdf.py  png.py  project.py  wheel_venv.py
tests/integration/: test_pandoc_seam.py
tests/unit/: test_bulk_change_extension.py  test_check_mutation_thresholds.py  test_clean_git_cache.py  test_convert_images.py  test_convert_img_tags.py  test_convert_links_to_plain_text.py  test_convert_links_to_plain_text_extra.py  test_convert_round_trip.py  test_convert_to_absolute.py  test_convert_to_absolute_extra.py  test_convert_to_absolute_fuzz.py  test_convert_to_relative.py  test_exceptions.py  test_export_book_fill.py  test_fix_german_quotes.py  test_full_export_book.py  test_full_export_book_markdown_ext_and_validation_path.py  test_full_export_book_output_file.py  test_full_export_book_pipeline.py  test_full_export_comic_cli.py  test_full_export_comic_combine.py  test_full_export_comic_pdf.py  test_generate_audiobook.py  test_generate_audiobook_clean_markdown_for_tts.py  test_generate_audiobook_cleaner_use_cases.py  test_generate_audiobook_use_cases.py  test_generate_images_deepai.py  test_image_conversion.py  test_images_integration.py  test_init_book_project.py  test_inject_images.py  test_load_export_settings.py  test_make_tag_message_test_ask_helpers.py  test_no_chdir_lint.py  test_normalize_toc_direct.py  test_normalize_toc_links.py  test_pandoc_batch_cmd_and_paths.py  test_pandoc_batch_patch_markdown_text.py  test_pandoc_batch_run_and_main.py  test_print_version_build_print_args.py  (+21 more)
tests/unit/tts/: test_base.py  test_edge_tts_adapter.py  test_elevenlabs_adapter.py  test_exceptions.py  test_factory.py  test_google_cloud_tts_adapter.py  test_google_translate_adapter.py  test_pyttsx3_adapter.py  test_retry.py  test_retry_behavior.py  test_text_chunking.py
