[project]
name = "manuscripta"
version = "0.3.0"
description = "Book production pipeline for authors and self-publishers. Multi-format export (PDF, EPUB, DOCX, HTML, Markdown), audiobook generation, translation, and manuscript tooling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
keywords = ["book", "publishing", "pandoc", "epub", "audiobook", "self-publishing", "kdp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Asterios Raptis"
email = "asteri.raptis@gmail.com"

[project.urls]
Homepage = "https://github.com/astrapi69/manuscripta"
Repository = "https://github.com/astrapi69/manuscripta"
Issues = "https://github.com/astrapi69/manuscripta/issues"

[project.scripts]
# --- Main commands ---
manuscripta-export = "manuscripta.export.book:main"
manuscripta-export-comic = "manuscripta.export.comic:main"
manuscripta-audiobook = "manuscripta.audiobook.generator:main"
manuscripta-init = "manuscripta.project.init:main"
manuscripta-tag = "manuscripta.project.tag_message:main"

# --- Export shortcuts ---
export-shortcuts = "manuscripta.export.shortcuts:main"
export-epub = "manuscripta.export.shortcuts:export_epub"
export-epub2 = "manuscripta.export.shortcuts:export_epub2"
export-e = "manuscripta.export.shortcuts:export_epub"
export-e2 = "manuscripta.export.shortcuts:export_epub2"
export-epub-with-cover = "manuscripta.export.shortcuts:export_epub_with_cover"
export-epub2-with-cover = "manuscripta.export.shortcuts:export_epub2_with_cover"
export-ewc = "manuscripta.export.shortcuts:export_epub_with_cover"
export-e2wc = "manuscripta.export.shortcuts:export_epub2_with_cover"
export-print-version-epub = "manuscripta.export.shortcuts:export_print_version_epub"
export-pve = "manuscripta.export.shortcuts:export_print_version_epub"
export-print-version-paperback = "manuscripta.export.shortcuts:export_print_version_paperback"
export-pvp = "manuscripta.export.shortcuts:export_print_version_paperback"
export-print-version-hardcover = "manuscripta.export.shortcuts:export_print_version_hardcover"
export-pvh = "manuscripta.export.shortcuts:export_print_version_hardcover"
export-markdown = "manuscripta.export.shortcuts:export_markdown"
export-md = "manuscripta.export.shortcuts:export_markdown"
export-pdf = "manuscripta.export.shortcuts:export_pdf"
export-p = "manuscripta.export.shortcuts:export_pdf"
export-docx = "manuscripta.export.shortcuts:export_docx"
export-d = "manuscripta.export.shortcuts:export_docx"
export-html = "manuscripta.export.shortcuts:export_html"
export-h = "manuscripta.export.shortcuts:export_html"
export-all-with-cover = "manuscripta.export.shortcuts:export_all_formats_with_cover"
export-all = "manuscripta.export.shortcuts:export_all_formats"
# Safe shortcuts (skip Step 1 & 4)
export-pdf-safe = "manuscripta.export.shortcuts:export_pdf_safe"
export-ps = "manuscripta.export.shortcuts:export_pdf_safe"
export-epub-safe = "manuscripta.export.shortcuts:export_epub_safe"
export-es = "manuscripta.export.shortcuts:export_epub_safe"
export-docx-safe = "manuscripta.export.shortcuts:export_docx_safe"
export-ds = "manuscripta.export.shortcuts:export_docx_safe"
export-markdown-safe = "manuscripta.export.shortcuts:export_markdown_safe"
export-mds = "manuscripta.export.shortcuts:export_markdown_safe"
export-html-safe = "manuscripta.export.shortcuts:export_html_safe"
export-hs = "manuscripta.export.shortcuts:export_html_safe"
export-print-version-paperback-safe = "manuscripta.export.shortcuts:export_print_version_paperback_safe"
export-pvps = "manuscripta.export.shortcuts:export_print_version_paperback_safe"
export-print-version-hardcover-safe = "manuscripta.export.shortcuts:export_print_version_hardcover_safe"
export-pvhs = "manuscripta.export.shortcuts:export_print_version_hardcover_safe"

# --- Comic shortcuts ---
export-comic-html = "manuscripta.export.shortcuts_comic:export_comic_html"
export-comic-pdf = "manuscripta.export.shortcuts_comic:export_comic_pdf"

# --- Init shortcuts ---
update-mdv = "manuscripta.project.shortcuts_init:run_update_metadata_values"
init-bp = "manuscripta.project.shortcuts_init:run_init_book_project"

# --- Markdown tools ---
fix-german-quotes = "manuscripta.markdown.german_quotes:main"
replace-md-bullet-points = "manuscripta.markdown.bullet_points:main"
unbold-md-headers = "manuscripta.markdown.unbold_headers:main"
replace-emojis = "manuscripta.markdown.emojis:main"

# --- Translation (DeepL) ---
translate = "manuscripta.translation.shortcuts:translate"
translate-de-es = "manuscripta.translation.shortcuts:translate_manuscript_from_german_to_spanish"
translate-en-es = "manuscripta.translation.shortcuts:translate_manuscript_from_english_to_spanish"
translate-en-de = "manuscripta.translation.shortcuts:translate_manuscript_to_german"
translate-de-en = "manuscripta.translation.shortcuts:translate_manuscript_from_german_to_english"
translate-book-deepl = "manuscripta.translation.deepl:main"

# --- Translation (LMStudio) ---
translate-book = "manuscripta.translation.lmstudio:main"
translate-book-lmstudio = "manuscripta.translation.lmstudio:main"
translate-book-en-es = "manuscripta.translation.shortcuts_lms:translate_manuscript_from_english_to_spanish"
translate-book-en-de = "manuscripta.translation.shortcuts_lms:translate_manuscript_from_english_to_german"
translate-book-en-fr = "manuscripta.translation.shortcuts_lms:translate_manuscript_from_english_to_french"
translate-book-de-en = "manuscripta.translation.shortcuts_lms:translate_manuscript_from_german_to_english"

# --- Utilities ---
full-export = "manuscripta.export.book:main"
generate-audiobook = "manuscripta.audiobook.generator:main"
reorder-chapters = "manuscripta.project.reorder:main"
make-tag-message = "manuscripta.project.tag_message:main"
bulk-change-ext = "manuscripta.utils.bulk_extension:main"
convert-images = "manuscripta.images.convert:main"
generate-images = "manuscripta.images.generate:main"
generate-images-deepai = "manuscripta.images.generate_deepai:main"
inject-images = "manuscripta.images.inject:main"
pandoc-batch = "manuscripta.utils.pandoc_batch:main"
clean-git-cache = "manuscripta.utils.git_cache:main"
create-chapters = "manuscripta.project.chapters:main"
update-metadata-values = "manuscripta.project.metadata:main"
convert-paths-to-absolute = "manuscripta.paths.to_absolute:main"
convert-paths-to-relative = "manuscripta.paths.to_relative:main"
print-version-build = "manuscripta.export.print_version:main"
strip-links = "manuscripta.markdown.strip_links:main"
normalize-toc = "manuscripta.markdown.normalize_toc:main"

[[tool.poetry.packages]]
include = "manuscripta"
from = "src"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.3.2"
python-dotenv = "^1.1.0"
requests = "^2.32.5"
pillow = "^11.2.1"
pyyaml = "^6.0.2"
toml = "^0.10.2"
ftfy = "^6.3.1"
questionary = "^2.1.1"
pymupdf = "^1.26.4"
edge-tts = "^7.2.7"
ebooklib = "^0.20"
beautifulsoup4 = "^4.14.3"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.138.13"
types-pyyaml = "^6.0.12.20250915"
types-toml = "^0.10.8.20240310"
ruff = "^0.14.0"
black = "^25.9.0"
codespell = "^2.4.1"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250913"
mypy = "^1.11"

[tool.poetry.group.test.dependencies]
hypothesis = ">=6,<7"
pytest = "^8.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=manuscripta --cov-report=term-missing"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
warn_unused_ignores = false
allow_redefinition = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.codespell]
ignore-words-list = "prozess"
